@@ -27,14 +27,15 @@ import org.apache.log4j.Logger;
 import org.bouncycastle.jcajce.provider.asymmetric.ec.BCECPublicKey;
 import org.bouncycastle.jcajce.provider.asymmetric.rsa.BCRSAPublicKey;
 import org.cesecore.certificates.certificateprofile.CertificateProfile;
-import org.cesecore.certificates.util.AlgorithmConstants;
-import org.cesecore.certificates.util.AlgorithmTools;
-import org.cesecore.keys.util.KeyTools;
 import org.cesecore.keys.validation.KeyValidatorBase;
 import org.cesecore.keys.validation.ValidationException;
 import org.cesecore.profiles.Profile;
 import org.cesecore.util.ui.DynamicUiProperty;
 import org.ejbca.core.model.util.EjbLocalHelper;
+
+import com.keyfactor.util.crypto.algorithm.AlgorithmConstants;
+import com.keyfactor.util.crypto.algorithm.AlgorithmTools;
+import com.keyfactor.util.keys.KeyTools;
 
 /**
  * Public key blacklist key validator using the Bouncy Castle BCRSAPublicKey implementation 
@@ -145,7 +146,7 @@ public class PublicKeyBlacklistKeyValidator extends KeyValidatorBase {
         }
         if (Float.compare(LATEST_VERSION, getVersion()) != 0) {
             // New version of the class, upgrade.
-            log.info(intres.getLocalizedMessage("blacklistkeyvalidator.upgrade", new Float(getVersion())));
+            log.info(intres.getLocalizedMessage("blacklistkeyvalidator.upgrade", Float.valueOf(getVersion())));
             init();
         }
     }
